[workspace]

[package]
name = "funcmap"
version = "0.1.0"
edition = "2021"
rust-version = "1.56"

[features]
default = ["alloc", "debug"] # TODO: remove debug
alloc = []
debug = ["funcmap-derive/debug"]

[dependencies]
"funcmap-derive" = { path = "funcmap-derive" }

[[test]]
name = "edition2015"
edition = "2015"

[[test]]
name = "edition2018"
edition = "2018"
