[package]
name = "funcmap"
version = "0.0.0"
authors = ["Matthias Stemmler <matthias.stemmler@gmail.com>"]
edition = "2021"
rust-version = "1.56" # should be the same as in Cargo.toml of funcmap_derive, docs and MSRV job
description = "Derivable functorial mappings for Rust"
readme = "README.md"
repository = "https://github.com/matthias-stemmler/funcmap"
license = "MIT OR Apache-2.0"
keywords = ["data", "derive", "macro", "map", "no_std"]
categories = ["algorithms", "data-structures", "development-tools", "no-std", "rust-patterns"]
publish = ["ktra"]

[features]
default = ["std"]
alloc = []
std = ["alloc"]

[dependencies]
"funcmap_derive" = { version = "=0.0.0", path = "../funcmap_derive", registry = "ktra" }
