[package]
name = "funcmap"
include = ["examples/**/*", "src/**/*", "Cargo.toml", "LICENSE-APACHE", "LICENSE-MIT", "crates-io.md"]
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = ["std"]
alloc = []
std = ["alloc"]

[dependencies]
"funcmap_derive" = { version = "=0.1.2", path = "../funcmap_derive" }
