[package]
name = "funcmap_derive"
include = ["src/**/*", "Cargo.toml", "LICENSE-APACHE", "LICENSE-MIT", "crates-io.md"]
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
proc-macro = true

[dependencies]
indexmap = { version = "1", features = ["std"] }
proc-macro2 = "1.0.19"
quote = "1"
syn = { version = "1.0.73", features = ["extra-traits", "fold", "full", "visit"] }
