[package]
name = "funcmap_derive"
version = "0.1.5"
edition = "2021"
rust-version = "1.65" # should be the same as in Cargo.toml of funcmap, docs and MSRV job
description = "Derivable functorial mappings for Rust"
readme = "crates-io.md"
repository = "https://github.com/matthias-stemmler/funcmap"
license = "MIT OR Apache-2.0"
keywords = ["data", "derive", "macro", "map", "no_std"]
categories = ["algorithms", "data-structures", "development-tools", "no-std", "rust-patterns"]
include = ["src/**/*", "Cargo.toml", "LICENSE-APACHE", "LICENSE-MIT", "crates-io.md"]

[lib]
proc-macro = true

[dependencies]
indexmap = { version = "2", features = ["std"] }
proc-macro2 = "1.0.19"
quote = "1"
syn = { version = "2", features = ["extra-traits", "fold", "full", "visit"] }
