[package]
name = "funcmap_tests"
version = "0.0.0"
edition = "2018" # macrotest doesn't support 2021 yet
publish = false

[dependencies]
funcmap = { path = "../funcmap" }

[build-dependencies]
# patch dependency: transitive dependency pest_derive 1.0.0 specifies quote ^0.3 but needs quote ^0.3.15
quote = "0.3.15"
toolchain_find = "0.2"

[dev-dependencies]
macrotest = "1.0.8"
rustversion = "1.0.6"
trybuild = "1.0.59"

[[test]]
name = "edition2015"
edition = "2015"

[[test]]
name = "edition2018"
edition = "2018"
