[package]
name = "funcmap_tests"
version = "0.0.0"
edition = "2018" # macrotest doesn't support 2021 yet
publish = false

[dependencies]
funcmap = { path = "../funcmap" }

[build-dependencies]
# patch dependency: make sure that formatting of macrotest output is consistent
prettyplease = "0.1.3"
# patch dependency: transitive dependency pest_derive 1.0.0 specifies quote ^0.3 but needs quote ^0.3.15
quote = "0.3.15"

[dev-dependencies]
macrotest = "1.0.9"
rustversion = "1.0.9"
trybuild = "1.0.67"

[[test]]
name = "edition2015"
edition = "2015"

[[test]]
name = "edition2018"
edition = "2018"
