[package]
name = "mapstruct-derive"
version = "0.1.0"
edition = "2021"
rust-version = "1.56"

[lib]
proc-macro = true

[features]
debug = []

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["derive", "extra-traits", "fold", "visit"] }

[dev-dependencies]
rstest = "0.11"
