[package]
name = "test_suite"
version = "0.0.0"
edition = "2018" # macrotest doesn't support 2021 yet
publish = false

[dependencies]
funcmap = { path = "../funcmap" }

[build-dependencies]
toolchain_find = "0.2"

[dev-dependencies]
macrotest = "1"
trybuild = "1"

[[test]]
name = "edition2015"
edition = "2015"

[[test]]
name = "edition2018"
edition = "2018"
